fix portrait scaling on mobile

--- a/public/css/video/style.css
+++ b/public/css/video/style.css
@@ -318,11 +318,12 @@
 @media only screen and (max-width: 1000px) {
     .video-container {
         height: 50%;
+        max-width: 100%;
     }
 
     #live-chat {
         height: 50%;
-        width: 100%;
+        max-width: 100%;
     }
 }
 
